<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:title="@string/app_name"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_scrollFlags="scroll|enterAlways|snap">

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.AppBarLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <HorizontalScrollView
                    android:id="@+id/hsv_btn_ctrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/ll_btn_ctrl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_http_demo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_http_demo"/>

                        <Button
                            android:id="@+id/btn_chart_demo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_chart_demo"/>

                        <Button
                            android:id="@+id/btn_anim_demo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_anim_demo"/>

                        <Button
                            android:id="@+id/btn_rx_demo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_rx_demo"/>

                    </LinearLayout>

                </HorizontalScrollView>

                <android.support.v7.widget.RecyclerView
                    android:layout_below="@+id/hsv_btn_ctrl"
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </RelativeLayout>



            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done_white_24px"
                android:layout_margin="16dp"
                android:layout_gravity="bottom|end"
                app:elevation="24dp"/>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_nav"
        app:theme="@style/ThemeOverlay.AppCompat.Light"
        app:headerLayout="@layout/header_nav"/>

</android.support.v4.widget.DrawerLayout>

<!--
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gong.demo.net.activities.MainActivity">
    
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/app_name"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_below="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/btn_http_demo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OkHttp"/>

        <Button android:id="@+id/btn_chart_demo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ChatView"/>

        <Button android:id="@+id/btn_anim_demo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Animation"/>

    </LinearLayout>

</FrameLayout>
-->